Make stuff work!
wtc:
first blush

--- a/apmanager/templates/accesspoints/commands/edit.html
+++ b/apmanager/templates/accesspoints/commands/edit.html
@@ -23,7 +23,7 @@
 {% endfor %}
 </ul>
 {% else %}
-<h3>{% trans "Target list if empty" %}</h3>
+<h3>{% trans "Target list is empty" %}</h3>
 {% endif %}
 </form>
 {% endblock %}
