--- a/apmanager/templates/accesspoints/init_overview.html
+++ b/apmanager/templates/accesspoints/init_overview.html
@@ -29,4 +29,5 @@
 </table>
 <button name="init" value="1">{% trans "Initialize selected access points" %}</button>
 </form>
+<form method="GET"><button>{% trans "Refresh" %}</button></form>
 {% endblock body %}
