add delete cmd button

--- a/apmanager/templates/accesspoints/commands/view.html
+++ b/apmanager/templates/accesspoints/commands/view.html
@@ -30,5 +30,8 @@
         <form method="POST">
             <input type="submit" name = "launch_btn" value="{% trans "Run" %}"/>
         </form>
+        <form method="POST">
+            <input type="submit" name="delete_btn" value="{% trans "Delete" %}"/>
+        </form>
 {% endblock body %}
 {% block body_public %}{% endblock %}
