--- a/apmanager/templates/admin/accesspoints/accesspoint/change_form.html
+++ b/apmanager/templates/admin/accesspoints/accesspoint/change_form.html
@@ -4,6 +4,7 @@
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
     <li><a href="clone/" class="historylink">{% trans "Clone" %}</a></li>
+    <li><a href="parameters/" class="historylink">{% trans "Parameters Overview" %}</a></li>
     <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
     {% if has_absolute_url %}
         <li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">
