fix missing translation strings, and dev path urls

--- a/apmanager/templates/accesspoints/commands/create.html
+++ b/apmanager/templates/accesspoints/commands/create.html
@@ -41,7 +41,7 @@
 		{% endfor %}
 		</select></td></tr>
 </table>
-<input type="submit" />
+<input type="submit" value="{% trans "Submit" %}" />
 </form>
 
 {% endblock %}
