--- a/apmanager/templates/admin/accesspoints/accesspoint/clone_form.html
+++ b/apmanager/templates/admin/accesspoints/accesspoint/clone_form.html
@@ -12,6 +12,11 @@
 {% endif %}{% endblock %}
 
 {% block object-tools %}
-FIXME: What the text does this texting page do...
+<p>{% blocktrans %}
+This page allows you to duplicate an Access Point into a new one.
+All parameters will be duplicated too.
+
+Please note that the IP Address must be unique for each Access Point.
+{% endblocktrans %}</p>
 {% endblock %}
 
